UI Fix - "Confirming Button"

--- a/view.html
+++ b/view.html
@@ -94,7 +94,7 @@
                     <p style="float: left; margin-left:5%;" class="activitypicc"><img id="actpic" src="images/coffeeinvert.svg" class="actpic" style="border: dotted 1px #cc0000;"></p>
 
                     <a href="#" id = "confirmInvitesButtonId" class="confirminvitesButton" onclick="confirmTable()" style="color:#ffffff; background-color: #cc0000;">CONFIRM TABLE</a>
-                    <a id = "InvitesSentId" class="confirminvitesButton" style="color:#ffffff; background-color: #cc0000; line-height: 40px; font-family: PT Sans;">CONFIRMING TABLE ... </a>
+                    <a id = "InvitesSentId" class="confirminvitesButton" style="color:#ffffff; background-color: #cc0000; ">CONFIRMING ... </a>
                 </div>
        <textarea cols="40" rows="8" name="table_message" id="table_message" placeholder="While we build the chat functionality, please use this space if you wish to inform anything to others like &#34I am running 10 min late&#34 or &#34Sorry, I have an emergency and I will not be able to make it&#34 "></textarea>
        <div style="text-align:center">
