--- a/mood.html
+++ b/mood.html
@@ -12,7 +12,7 @@
         <script src="js/jquery.session.js"></script>
         <script src="js/loggedInOutBehavior.js"></script>
         <script src="js/mood.js"></script>
-        
+        <script src="js/analytics.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
 
         <link rel="stylesheet" type="text/css" href="css/mood_1.css">
