Analytics update part 3 - google

--- a/preConversationLinks.html
+++ b/preConversationLinks.html
@@ -10,6 +10,7 @@ and open the template in the editor.
         <link rel="stylesheet" href="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
         <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
         <script src="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+        <script src="js/analytics.js"></script>
     </head>
     <body>
             <div data-role="page" id="dialogPage" class="ui-content" style="text-align: center;padding:0em">
