--- a/upcomingInvitations.html
+++ b/upcomingInvitations.html
@@ -35,6 +35,7 @@
         <link rel="stylesheet" type="text/css" href="css/upcomingInvitations.css">
         <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/upcomingInvitationsipad.css">
         <link href="//fonts.googleapis.com/css?family=PT+Sans Narrow:400,700" rel="stylesheet" type="text/css">
+        <script src="js/analytics.js"></script>
     </head>
 
     <body>
