--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -34,6 +34,7 @@
         <link href='http://fonts.googleapis.com/css?family=PT+Sans:700,400' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/confirmInvitations.css">
         <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/confirmInvitationsipad.css">
+        <script src="js/analytics.js"></script>
     </head>
 
     <body>
