--- a/index.html
+++ b/index.html
@@ -3,17 +3,7 @@
 <title>A web page that points a browser to a different page </title>
 <meta http-equiv="refresh" content="0; URL=http://m.tabletribes.com/mood.html">
 <meta name="keywords" content="automatic redirection">
- <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-60472408-1', 'auto');
-  ga('require', 'linkid', 'linkid.js');
-  ga('send', 'pageview');
-
-</script>
+<script src="js/analytics.js"></script>
 </head>
 <body>
     <!-- Start of StatCounter Code for Default Guide -->
