--- a/myPastTables.html
+++ b/myPastTables.html
@@ -23,6 +23,7 @@
         <link href="//fonts.googleapis.com/css?family=PT+Sans Narrow:400,700" rel="stylesheet" type="text/css">
         <link rel="stylesheet" type="text/css" href="css/myTables.css">
         <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/myTablesipad.css">
+        <script src="js/analytics.js"></script>
     </head>
 
     <body>
