--- a/pendingInvitations.html
+++ b/pendingInvitations.html
@@ -22,6 +22,7 @@
         <link href="//fonts.googleapis.com/css?family=PT+Sans Narrow:400,700" rel="stylesheet" type="text/css">
          <link href='http://fonts.googleapis.com/css?family=PT+Sans:700,400' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/pendingInvitationsipad.css">
+        <script src="js/analytics.js"></script>
     </head>
 
     <body>
