--- a/register.html
+++ b/register.html
@@ -42,7 +42,7 @@
   <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
 <script src="http://jqueryvalidation.org/files/dist/jquery.validate.min.js"></script>
 <script src="http://jqueryvalidation.org/files/dist/additional-methods.min.js"></script>
-
+<script src="js/analytics.js"></script>
     </head>
 
     <body>
