fix for time defaulting to 12am while confirming and date display issue

--- a/view.html
+++ b/view.html
@@ -22,7 +22,7 @@
                     var dateString=(date.getUTCMonth()+1)+"-"+date.getUTCDate()+"-"+date.getUTCFullYear()
                     $('#inviteTimePicker').timepicker({ 'step': 15 });
 //                    $('#inviteTimePicker').timepicker('setTime', date);
-                    $('#dateString').text(dateString)
+//                    $('#dateString').text(dateString)
                 });
   
         </script>      
