- fix for google logo to be added as a requirement from google in search box - fix for Starbucks location address to be detailed

--- a/mood.html
+++ b/mood.html
@@ -101,9 +101,10 @@
                     <!-- This is the location filter div-->
                     <label for="location" class="ui-hidden-accessible">Location:</label>
                     <input id="address" name="location" id="location" placeholder="Location" value="" type="text">
+                    <img src="img/powered-by-google-on-white.png">
 
                 </ul> <!--ends the preference list-->
-                <br><br>
+                <br>
 
                 <!-- This div is the Find my people button. Inactive once clicked-->
                 <div id="findppl" style="text-align:center">
