do no update time if accepted

--- a/view.html
+++ b/view.html
@@ -75,7 +75,7 @@
                                     
                                     <label for="select-native-11"></label>
                                     <div style="position:relative;">
-                                    <input id="inviteTimePicker" type="text" class="time ui-timepicker-input" autocomplete="off" style="background-color:#88ccc1; color:#cc0000;">
+                                    <input id="inviteTimePicker" type="text" class="time ui-timepicker-input" autocomplete="off" style="background-color:#88ccc1; color:blue; font-weight: 800; font-size: 14px">
                                    
                                 </fieldset>
                             </form>
