--- a/mood.html
+++ b/mood.html
@@ -45,7 +45,7 @@
 
             <div role="main" class="ui-content jqm-content jqm-fullwidth activitypanel"> 
                 <li data-role="collapsible" data-collapsed="false" data-collapsed-icon="arrow-d ui-nodisc-icon" data-expanded-icon="arrow-u" data-iconpos="right" data-inset="false" data-mini="true" style="background-color:#333333;" class="panel0">
-                   <h2>COFFEE, DRINKS, FOOD?</h2>
+                   <h2>COFFEE, DRINKS, FOOD: Choose One</h2>
                    <div data-role="controlgroup" data-type="horizontal" style="text-align:center; padding: 0px; margin: 0px; width:100%">
 
                     <a href="#" class="activitiesImages ui-btn ui-corner-all" selected="0" activity="coffee" style="background:#ffffff;"><img src="images/coffee.svg" class="coffee"></a>
