Default Coffee in the mood screen

--- a/mood.html
+++ b/mood.html
@@ -48,7 +48,7 @@
                    <h2>COFFEE, DRINKS, FOOD: Choose One</h2>
                    <div data-role="controlgroup" data-type="horizontal" style="text-align:center; padding: 0px; margin: 0px; width:100%">
 
-                    <a href="#" class="activitiesImages ui-btn ui-corner-all" selected="0" activity="coffee" style="background:#ffffff;"><img src="images/coffee.svg" class="coffee"></a>
+                    <a href="#" class="activitiesImages ui-btn ui-corner-all" selected="1" activity="coffee" style="background:#cc0000;"><img src="images/coffeeselect.svg" class="coffee"></a>
                     <a href="#" class="activitiesImages ui-btn ui-corner-all" selected="0" activity="drinks" style="background:#ffffff;"><img src="images/drinks.svg" class="drinks"></a>
                     <a href="#" class="activitiesImages ui-btn ui-corner-all" selected="0" activity="dine" style="background:#ffffff;"><img src="images/dine.svg" class="dine"></a>
                   
