fix for nearest starbucks issue!

--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -66,7 +66,7 @@
                                                 <h4 id="bioText" style="color:#000; opacity:1;"></h4></div>
                     </div>
 
-               
+            <div id="map"></div>   
             <input id="address" name="location" id="location" placeholder="Location" value="" type="hidden">
 
                       <!-- This div is for the left panel-->
