UI changes to Pending invitations and my tables to be confirmed

--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -57,8 +57,8 @@
             </div>
 
                 <fieldset class="ui-grid-b" style="border:1px solid #cc0000; background:#ffffff; margin-top:2px;">
-                    <input id="addButton" type="image" src="images/confirm.svg"/>
-                    <input id="moveOnButton" type="image" src="images/moveon.svg"/>
+                    <input id="addButton" type="image" src="images/confirm.jpg"/>
+                    <input id="moveOnButton" type="image" src="images/moveon.jpg"/>
 <!--                    <div class="ui-block-c" class="ConfirmButton"><input id="confirmButton" type="image" src="images/confirm.svg"/></div>-->
                 </fieldset>
                         <div data-tap-toggle="false" style="overflow-y:scroll; padding:0px; background-color:#ffffff; opacity:0.7;" class="biodiv"> 
