added changes for showing messages for the table

--- a/view.html
+++ b/view.html
@@ -101,6 +101,10 @@
        <div style="text-align:center">
        <a href="#" id = "sendNoteButtonId" class="sendNoteButton" onclick="sendTableMessage()" style=" color:#ffffff; background-color: #cc0000;">SEND NOTE</a>
        </div>
+       <div style="background-color:#ffffff; opacity:0.7;">
+            <h3> Past Messages: </h3>
+            <h4 id="tableMessages" style="color:#000; opacity:1;"></h4>
+       </div>
              <div data-role="popup" id="preConversationPopup">
                 <h3>Thank you for being part of the TableTribes journey and helping us test our product. We'll be following up about your experience by email. <h3>
                 <br>
