"Confirm Final Details" panel option to "Tables Waiting for confirmed" and "Upcoming Tables" to "Confirmed Tables"

--- a/profile.html
+++ b/profile.html
@@ -90,8 +90,8 @@
                     <li data-icon="delete"><a href="#" data-rel="close" style="background-color: #fff;text-align: center; font-weight:700;" id="beta"><p>BETA</p></a></li>
                     <li data-icon="logoicon"><a id="home" href="#">Home</a></li>
                     <li class="loggedInFields"><a id="invites">RESPOND TO INVITES<span id="inviteNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>                   
-                    <li class="loggedInFields"><a id="myTablesToBeConfirmed">CONFIRM FINAL DETAILS<span id="tableNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>
-                    <li class="loggedInFields"><a id="myUpcomingTables">UPCOMING TABLES<span id="upComingTableNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>
+                    <li class="loggedInFields"><a id="myTablesToBeConfirmed">TABLES WAITING FOR CONFIRMATION<span id="tableNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>
+                    <li class="loggedInFields"><a id="myUpcomingTables">CONFIRMED TABLES<span id="upComingTableNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>
                     <li class="loggedInFields"><a id="myPastTables">PAST TABLES</a></li>                 
                     <p id="welcomemsg">Welcome to TableTribes!</p><p id="vision"> Our vision is to spark a change in how we interact with the people around us by creating tools that enable more meaningful connections on a day-to-day basis. 
 
