--- a/view.html
+++ b/view.html
@@ -10,6 +10,10 @@
         <link rel="stylesheet" href="css/timepicker.css">
         <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script> 
        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=true"></script>
+       <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery.ui.map.js"></script>
+
         <script src="js/jquery.session.js"></script>
         <script src="js/loggedInOutBehavior.js"></script>
         <script src="js/view.js"></script>
@@ -25,7 +29,7 @@
 //                    $('#dateString').text(dateString)
                 });
   
-        </script>      
+        </script>  
 
         <link rel="stylesheet" type="text/css" href="css/view.css">
         <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/viewipad.css">
@@ -86,7 +90,8 @@
 
                 <label for="location" class="ui-hidden-accessible">Location:</label>
                 <input id="address" name="location"  placeholder="Location" value="" type="text">
-
+                <div id="map_canvas" class="ui-grid-b" style="height:160px;">
+                </div>
 <!--                <div style="text-align:center; padding-top:5%">
                     <p style="float: left; margin-left:10px;" class="activitypicc"><img id="actpic" src="images/coffeeinvertbig.png" class="actpic" style="border: dotted 1px#b42723;"></p>
 
