--- a/mood.html
+++ b/mood.html
@@ -138,10 +138,14 @@
 
             <!-- This is for the right panel-->
             <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="a" id="add-form">
-                <ul data-role="listview">
-                    <li data-icon="delete"><a href="#" data-rel="close" style="background-color: #fff;text-align: center; font-weight:700;" id="beta"><p>BETA</p></a></li>
+                <ul data-role="listview" id="rightpanellist">
                     <li data-icon="logoicon"><a id="home" href="#">Home</a></li>
-                    <li class="loggedInFields"><a id="invites">RESPOND TO INVITES<span id="inviteNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>                   
+                    <li data-icon="delete"><a href="#" data-rel="close" style="background-color: #fff;text-align: center; font-weight:700;" id="beta"><p>NOTIFICATIONS</p></a></li>
+                    <div id="panelMain" role="main" class="ui-content jqm-content jqm-fullwidth"> <!-- Important-->
+                
+
+                    </div>
+          <!--          <li class="loggedInFields"><a id="invites">RESPOND TO INVITES<span id="inviteNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>                   
                     <li class="loggedInFields"><a id="myTablesToBeConfirmed">TABLES WAITING FOR CONFIRMATION<span id="tableNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>
                     <li class="loggedInFields"><a id="myUpcomingTables">CONFIRMED TABLES<span id="upComingTableNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>
                     <li class="loggedInFields"><a id="myPastTables">PAST TABLES</a></li>                 
@@ -149,7 +153,7 @@
 
 We’re building something new, and as an early-stage startup, your participation in our survey during this beta phase is crucial to us right now because it gives us feedback on how to make it better.<br><br><a href="https://www.surveymonkey.com/r/7DFCM5J" style="text-decoration: none;">Go To Survey</a> <br>
 
-<br>Thank you for being part of this journey!</p>
+<br>Thank you for being part of this journey!</p>-->
 
                 </ul>
             </div><!--  right panel -->
