--- a/view.html
+++ b/view.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/timepicker.css">
         <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script> 
        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=true"></script>
-       <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+       
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.ui.map.js"></script>
 
@@ -103,7 +103,8 @@
             </div> /content -->
                 <div style="text-align:center; padding-top:5%">
                     <!--<p style="float: left; margin-left:5%;" class="activitypicc"><img id="actpic" src="images/coffeeinvert.svg" class="actpic" style="border: dotted 1px #cc0000;"></p>-->
-
+                    <h3 id="confirmTableText"> Table is Confirmed! </h3>
+                    <h3 id="notConfirmTableText"> Table is pending Confirmation (by at least 2)</h3>
                     <a href="#" id = "confirmInvitesButtonId" class="confirminvitesButton" onclick="confirmTable()" style="color:#ffffff; background-color: #cc0000;">Yes, I'll Join</a>
                     <a id = "InvitesSentId" class="sendNoteButton" onclick="showPreConvPopup()" style="color:#ffffff; background-color: #cc0000; ">CONFIRMING ... </a>
                     <a href="#" id = "rejectInviteButtonId" class="confirminvitesButton" onclick="rejectTable()" style="color:#ffffff; background-color: #cc0000;">No, I'll Pass</a>
