Adding the organizer in the confirmation screen

--- a/view.html
+++ b/view.html
@@ -155,6 +155,7 @@
            <!-- This is for the right panel-->
             <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="a" id="add-form">
                 <ul data-role="listview" id="rightpanellist">
+                     <li data-icon="delete"><a href="#" data-rel="close" style="background-color: #fff;text-align: center; font-weight:700;" id="beta"><p>BETA</p></a></li>
                     <li data-icon="logoicon"><a id="home" href="#">Home</a></li>
                     <li data-icon="delete"><a href="#" data-rel="close" style="background-color: #fff;text-align: center; font-weight:700;" id="beta"><p>NOTIFICATIONS</p></a></li>
                     <div id="panelMain" role="main" class="ui-content jqm-content jqm-fullwidth"> <!-- Important-->
