--- a/view.html
+++ b/view.html
@@ -108,6 +108,8 @@
                     <a href="#" id = "confirmInvitesButtonId" class="confirminvitesButton" onclick="confirmTable()" style="color:#ffffff; background-color: #cc0000;">Yes, I'll Join</a>
                     <a id = "InvitesSentId" class="sendNoteButton" onclick="showPreConvPopup()" style="color:#ffffff; background-color: #cc0000; ">CONFIRMING ... </a>
                     <a href="#" id = "rejectInviteButtonId" class="confirminvitesButton" onclick="rejectTable()" style="color:#ffffff; background-color: #cc0000;">No, I'll Pass</a>
+                    <a href="#" id = "addMoreButtonId" class="confirminvitesButton" onclick="addMore()" style="color:#ffffff; background-color: #cc0000;">Invite Others</a>
+                    
                     <!--<a id="preConvoPopupButton"class="sendNoteButton" onclick="showPreConvPopup()" style="color:#ffffff; background-color: #cc0000; ">Show Links </a>-->
                 </div>
 <!--       <textarea cols="40" rows="8" name="table_message" id="table_message" placeholder="While we build the chat functionality, please use this space if you wish to inform anything to others like &#34I am running 10 min late&#34 or &#34Sorry, I have an emergency and I will not be able to make it&#34 "></textarea>
