--- a/view.html
+++ b/view.html
@@ -19,6 +19,8 @@
         <script src="js/view.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
         <script src="js/jQuery.timepicker.js"></script>
+        <script src="js/jstz-1.0.4.min.js"></script>
+
         <script>
              $(function() {
                     var timeInMs=(new Date()).getTime()+getParameterByName('inviteTime')*60*1000;
