hiding add more button in the pop up for the find your people screen

--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -85,9 +85,9 @@
            
             <div data-role="popup" id="inviteSentPopup" data-transition="flow" data-overlay-theme="b" data-theme="b" data-dismissible="false" style="max-width:400px;">
                
-                <h3 class="ui-title">Invite sent! You should hear back soon. In the meantime, you can invite upto 3 people for this table or confirm this table</h3>
-                <a href="#" id = "addMoreButton" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" onclick="addMorePeople() ">Add more</a>
-                <a href="#" id = "confirmButton" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-transition="flow" onclick="confirmInvitation()" >Confirm Invite</a>
+                <h3 id="popUpText" class="ui-title">Invite sent! You should hear back soon. In the meantime, you can invite upto 2 people for this table or confirm this table</h3>
+                <a href="#" id = "popupAddMoreButton" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" onclick="addMorePeople() ">Add more</a>
+                <a href="#" id = "popupConfirmButton" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-transition="flow" onclick="confirmInvitation()" >Confirm Invite</a>
                 <br>
             </div>
                       <!-- This div is for the left panel-->
