updates from email - 6/6/15

--- a/view.html
+++ b/view.html
@@ -114,14 +114,14 @@
                     
                     <!--<a id="preConvoPopupButton"class="sendNoteButton" onclick="showPreConvPopup()" style="color:#ffffff; background-color: #cc0000; ">Show Links </a>-->
                 </div>
-<!--       <textarea cols="40" rows="8" name="table_message" id="table_message" placeholder="While we build the chat functionality, please use this space if you wish to inform anything to others like &#34I am running 10 min late&#34 or &#34Sorry, I have an emergency and I will not be able to make it&#34 "></textarea>
+       <textarea cols="40" rows="8" name="table_message" id="table_message" placeholder="While we build the chat functionality, please use this space if you wish to inform anything to others like &#34I am running 10 min late&#34 or &#34Sorry, I have an emergency and I will not be able to make it&#34 "></textarea>
        <div style="text-align:center">
        <a href="#" id = "sendNoteButtonId" class="sendNoteButton" onclick="sendTableMessage()" style=" color:#ffffff; background-color: #cc0000;">SEND NOTE</a>
        </div>
        <div style="background-color:#ffffff; opacity:0.7;">
             <h3> Past Messages: </h3>
             <h4 id="tableMessages" style="color:#000; opacity:1;"></h4>
-       </div>-->
+       </div>
              <div data-role="popup" id="preConversationPopup">
                 <h3>Thank you for being part of the TableTribes journey and helping us test our product. We'll be following up about your experience by email. <h3>
                 <br>
