--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -90,6 +90,13 @@
                 <a href="#" id = "popupConfirmButton" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-transition="flow" onclick="confirmInvitation()" >Confirm Invite</a>
                 <br>
             </div>
+            <div data-role="popup" id="noUserFoundPopup" data-transition="flow" data-overlay-theme="b" data-theme="b" data-dismissible="false" style="max-width:400px;">
+               
+                <h3 id="noUserFoundPopupText" class="ui-title">Oops, looks like we could not find anyone right now. Would you like to try again or go back?</h3>
+                <a href="#" id = "popupTryAgainButton" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" onclick="popTryAgain()">Try again</a>
+                <a href="#" id = "popupGoBackButton" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-transition="flow" onclick="popupGoBack()" >Go Back</a>
+                <br>
+            </div>
                       <!-- This div is for the left panel-->
             <div data-role="panel" data-position-fixed="true" data-display="overlay" data-theme="a" id="nav-panel">
                 <ul data-role="listview">
