updates from email - 6/7/15

--- a/register.html
+++ b/register.html
@@ -101,7 +101,7 @@
                      
                         <!-- <label for="emailAddress" class="ui-hidden-accessible">Email address</label> -->
                         <div id="registerPage1">
-                        <input name="test" id="test" placeholder="Enter Beta Access Code" value="TTisawesome" type="password"/> 
+                        <input name="test" id="test" placeholder="Enter Beta Access Code" value="#ttradius" type="password"/> 
                         <input name="betaAccessCode" id="betaAccessCode" placeholder="Enter Beta Access Code" value="" type="password"/> 
                         <input name="email" id="email" placeholder="Enter email" value="" type="email"/>
                         <label for="password" class="ui-hidden-accessible">Password</label>
