hiding view screen for rejected users

--- a/view.html
+++ b/view.html
@@ -124,6 +124,11 @@
             <h4 id="tableMessages" style="color:#000; opacity:1;"></h4>
        </div>
                 </div>
+<div data-role="popup" id="notPartOfTablePopup" data-transition="flow" data-overlay-theme="b" data-theme="b" data-dismissible="false" style="max-width:400px;">
+               
+                <h3 id="notPartOfTablepopupText" class="ui-title">Oops, looks like you are no longer part of this table. We will redirect you momentarily</h3>
+               
+            </div>
              <div data-role="popup" id="preConversationPopup">
                 <h3>Thank you for being part of the TableTribes journey and helping us test our product. We'll be following up about your experience by email. <h3>
                 <br>
