update based on email - 6/9

--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -87,7 +87,7 @@
                
                 <h3 id="popUpText" class="ui-title">Invite sent! We’ll let you know as soon as we hear back. In the meantime, invite up to 2 more people or finalize your details.</h3>
                 <a href="#" id = "popupAddMoreButton" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" onclick="addMorePeople() ">Add more</a>
-                <a href="#" id = "popupConfirmButton" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-transition="flow" onclick="confirmInvitation()" >Confirm Invite</a>
+                <a href="#" id = "popupConfirmButton" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-transition="flow" onclick="confirmInvitation()" >Confirm Details</a>
                 <br>
             </div>
             <div data-role="popup" id="noUserFoundPopup" data-transition="flow" data-overlay-theme="b" data-theme="b" data-dismissible="false" style="max-width:400px;">
