changes for addInviteTable timezone and blocking user for the period user is in a table

--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -25,6 +25,8 @@
         <script src="js/jquery.flip.min.js"></script>
         
         <script type="text/javascript" src="http://jchavannes.com/include/scripts/3p/jquery.timer.js"></script>
+        <script src="js/jstz-1.0.4.min.js"></script>
+
         
     </head>
 
