UI changes - minor updates

--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -99,7 +99,7 @@
             </div>
             <div data-role="popup" id="noUserFoundPopup" data-transition="flow" data-overlay-theme="b" data-theme="b" data-dismissible="false" style="max-width:400px;">
                
-                <h3 id="noUserFoundPopupText" class="ui-title">Sorry, doesn’t look like anyone’s around yet. You can go back or this screen will auto refresh in 30 sec</h3>
+                <h3 id="noUserFoundPopupText" class="ui-title">Sorry, doesn’t look like anyone’s around yet. You can go back or wait for the screen to auto refresh in 30 sec</h3>
                 <h3 id="noUserFoundPopupCounterText" class="ui-title">TEST</h3>
                 
                 <a href="#" id = "popupTryAgainButton" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" onclick="popTryAgain()">REFRESH</a>
