Sept 2015 Flow - UI fixes #3

--- a/view.html
+++ b/view.html
@@ -44,7 +44,7 @@
         <div data-role="page" data-theme="a">
 
             <div data-role="header" id="header" data-position="fixed">  
-                <h3     style ="padding-top: 11px; padding-bottom: 10px;">CONFIRMATION 
+                <h3 id="headerId" style ="padding-top: 11px; padding-bottom: 10px;">CONFIRM
                     <a href="#add-form"> <span id="notificationNo" class="ui-header-notificationNo"/></a></h3>
                 
                 <!-- This is the  to initiate side panels-->
@@ -70,7 +70,7 @@
       <div id="locationDiv" class="ui-grid-b" >
           <input id="address" name="location"  placeholder="Location" value="" type="text" style="height:100%;">
       </div>
-                <div id="map_canvas" class="ui-grid-b" style="height:160px;">
+                <div id="map_canvas" class="ui-grid-b" style="height:260px;">
                 </div>  
      <div class="ui-grid-b" style=" padding:0px; background-color: #88ccc1;">
                     <div class="ui-block-b confirmdate"><div class="ui-bar ui-bar-a" style="  font-size:25px; height:80px; margin:0px; padding:0px; background-color:#ffbb00; border: none; text-shadow: none;">
