style and other updates -2

--- a/initial.html
+++ b/initial.html
@@ -23,7 +23,7 @@
 
     <body>
 
-        <div data-role="page" data-theme="a" class="ui-content">
+        <div data-role="page" data-theme="a" class="ui-content ui-background">
 
               <div data-role="header" id="header" data-position="fixed">  
                 <h3     style ="padding-top: 11px; padding-bottom: 10px;"></h3>
@@ -55,7 +55,7 @@
                 
                 <br><br>
                 <div  style="text-align:center">
-                    <a href="#" id="logInButton" class="findpplBtn" style="color:#ffffff; background-color: #ff3300; margin-top:10px;" >LOG IN</a>
+                    <a href="#" id="logInButton" class="findpplBtn" style="color:#ffffff; background-color: #ff3300;" >LOG IN</a>
                 </div>     
                 <div  style="text-align:center">
                     <a id="signUpButton" class="findpplBtn" style="color:#ffffff; background-color: #ffcc99; margin-top:10px;" >SIGN UP</a>
