style and other updates -4

--- a/mood.html
+++ b/mood.html
@@ -44,7 +44,7 @@
 
 
 
-            <div role="main" class="ui-content jqm-content jqm-fullwidth" style="padding-top:0px; padding-bottom:0px"> 
+            <div role="main" class="ui-content jqm-content jqm-fullwidth" style="padding-top:0px; padding-bottom:0px; padding-left: 0px;"> 
                 
                 <li data-role="collapsible" data-collapsed="false" data-iconpos="right" data-inset="false" style="list-style-type: none;" class="panel0">
                    <h2>CHOOSE ONE</h2>
