style and other updates -5

--- a/mood.html
+++ b/mood.html
@@ -67,7 +67,7 @@
                     <li data-role="collapsible" data-iconpos="right" data-inset="false" data-mini="true" style="background-color:#ffcc99;" class="panel1">
                         <h2>WHAT'S ON YOUR MIND?</h2>
                         <div id="tagsText" class='ui-tags-text'>
-                        <h3>CHOOSE UPTO 3 TAGS</h3>
+                        <h3>Choose up to 3 tags</h3>
                         </div>
                         <form id="topicsForm">
                             <fieldset id="topicsList" data-role="controlgroup" data-mini="true"> 
@@ -91,15 +91,15 @@
 
 
 
-                    <li id="whereMenu" data-role="collapsible" data-iconpos="right" class="place" data-inset="false" style="background-color:#009999;">
+<!--                    <li id="whereMenu" data-role="collapsible" data-iconpos="right" class="place" data-inset="false" style="background-color:#009999;">
                         <h2 id="whereText" value="">WHERE?</h2>
                         <ul data-role="listview" data-mini="true">
-                            <!--<li onclick="changeWhereHeading(5,'Less than 250 ft (1 block)')"><a href="#">Less than 250 ft (1 block)</a></li>-->
+                            <li onclick="changeWhereHeading(5,'Less than 250 ft (1 block)')"><a href="#">Less than 250 ft (1 block)</a></li>
                             <li onclick="changeWhereHeading(10,'NEIGHBORHOOD < 1/2 MILE')"><a id="radius1" href="#">NEIGHBORHOOD <I>< 1/2 MILE</I></a></li>
                             <li onclick="changeWhereHeading(100,'EXPLORE A LITTLE < 5 MILES')"><a id="radius2" href="#">EXPLORE A LITTLE<I>< 5 MILES</I></a></li>
                             <li onclick="changeWhereHeading(300,'FLEXIBLE < 15 MILES')"><a id="radius3" href="#">FLEXIBLE<I>< 15 MILES</I></a></li>
                         </ul>
-                    </li>
+                    </li>-->
                     
 
                     <!-- This is the location filter div-->
@@ -114,7 +114,7 @@
 
                 <!-- This div is the Find my people button. Inactive once clicked-->
                 <div id="findppl" style="text-align:center">
-                    <a href="#" class="findpplBtn" onclick="findMyPeople()" style="color:#ffffff; background-color: #ff3300;">WHO'S AROUND?</a>
+                    <a href="#" class="findpplBtn" onclick="findMyPeople()" style="color:#ffffff; background-color: #ff3300;">CONNECT WITH PEOPLE</a>
                 </div>
 
 
