style and other updates -6

--- a/initial.html
+++ b/initial.html
@@ -53,12 +53,12 @@
                     <a href="#" id="continueButton" class="findpplBtn" style="color:#ffffff; background-color: #cc0000; margin-top:10px;" >LOG IN</a>
                 </div>-->
                 
-                <br><br>
+<br><br><br><br><br>
                 <div  style="text-align:center">
-                    <a href="#" id="logInButton" class="findpplBtn" style="color:#ffffff; background-color: #ff3300;" >LOG IN</a>
+                    <a href="#" id="logInButton" class="findpplBtn" style="color:#ffffff; background-color: #ff3300; font-weight: 500" >LOG IN</a>
                 </div>     
                 <div  style="text-align:center">
-                    <a id="signUpButton" class="findpplBtn" style="color:#ffffff; background-color: #ffcc99; margin-top:10px;" >SIGN UP</a>
+                    <a id="signUpButton" class="findpplBtn" style="color:#ffffff; background-color: #ffcc99; margin-top:10px; font-weight: 500" >SIGN UP</a>
                 </div>
 
 <!--                <div style="text-align:center; margin-top:10px;"> 
