style and other updates -7

--- a/confirmInvitations_old.html
+++ b/confirmInvitations_old.html
@@ -40,7 +40,7 @@ min-height: 568px;
         </div>
             <!--iframe name="hiddenFrame1" id = "hiddenFrame1" class="hide"></iframe-->  
 
-        <!--form name="confirmInviteForm" id="confirmInviteForm" method="post" action="http://ancient-falls-9049.herokuapp.com/credentialService/updateInvitation" target="hiddenFrame1">  
+        <!--form name="confirmInviteForm" id="confirmInviteForm" method="post" action="http://evening-thicket-5124.herokuapp.com/credentialService/updateInvitation" target="hiddenFrame1">  
 
                 <input type="hidden" name="username_from" id="username_from">
                 <input type="hidden" name="latitude_invite" id="latitude_invite">
