--- a/profile.html
+++ b/profile.html
@@ -87,16 +87,16 @@
 !-->
 <!-- left panel -->
 
-            <!-- This is for the right panel-->
+             <!-- This is for the right panel-->
             <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="a" id="add-form">
                 <ul data-role="listview" id="rightpanellist">
-                    <li data-icon="delete"><a href="#" data-rel="close" style="background-color: #fff;text-align: center; font-weight:700;" id="beta"><p>BETA</p></a></li>
-                    <li data-icon="logoicon"><a id="home" href="#">HOME</a></li>
-                    <li data-icon="logoicon"><a id="LeftPanelProfile">MY PROFILE</a></li>
-                    <li onclick="login()" class="loggedOutFields" data-icon="bell"><a id="login" href="">Login</a></li>
-                    <li data-icon="logouticon" onclick="logout()" class="loggedInFields" data-icon="bell"><a id="logout" href="">Logout</a></li>
+                    <li data-icon="false" style="height: 70px;"><a href="#" data-rel="close" style="background-color: #ffffff;text-align: center; font-weight:500; font-family: Helvetica; font-size: 24px; color: #ff3300; text-shadow: none" id="beta"><p>BETA</p></a></li>
+                    <li data-icon="false" style="height: 50px; line-height: 50%"><a id="home" href="#" style="background-color: #ffffff; color: #999999; font-weight: 300;">HOME</a></li>
+                    <li data-icon="false" style="height: 50px;"><a id="LeftPanelProfile" style="background-color: #ffffff; color: #999999; font-weight: 300">MY PROFILE</a></li>
+                    <li data-icon="false" style="height: 50px;" onclick="login()" class="loggedOutFields"><a id="login" href="" style="background-color: #ffffff; color: #999999; font-weight: 300">Login</a></li>
+                    <li data-icon="false" style="height: 50px;" onclick="logout()" class="loggedInFields"><a id="logout" href="" style="background-color: #ffffff; color: #999999; font-weight: 300">Logout</a></li>
                     
-                    <li data-icon="delete"><a href="#" data-rel="close" style="background-color: #fff;text-align: center; font-weight:700;" id="beta"><p>NOTIFICATIONS</p></a></li>
+                    <li data-icon="false" style="height: 70px;"><a href="#" data-rel="close" style="background-color: #ffffff;text-align: center; font-weight:500; font-family: Helvetica; font-size: 24px; color: #ff3300; text-shadow: none" id="beta"><p>NOTIFICATIONS</p></a></li>
                     <div id="panelMain" role="main" class="ui-content jqm-content jqm-fullwidth"> <!-- Important-->
                 
 
