style and other updates -8

--- a/mood.html
+++ b/mood.html
@@ -67,7 +67,8 @@
                     <li data-role="collapsible" data-iconpos="right" data-inset="false" data-mini="true" style="background-color:#ffcc99;" class="panel1">
                         <h2>WHAT'S ON YOUR MIND?</h2>
                         <div id="tagsText" class='ui-tags-text'>
-                        <h3>Choose up to 3 tags</h3>
+                        <div style="margin-top:7px">FEAST: Which pillar(s) do you identify with? </div>
+                        <div style="margin-bottom: 10px">Choose up to 3 tags...</div>
                         </div>
                         <form id="topicsForm">
                             <fieldset id="topicsList" data-role="controlgroup" data-mini="true"> 
